* fix rakismet initializer
* remove stylesheet customization
* use aato instead of aatos
* authlogic has problems: not sure it's recording last_login magic columns, investigate
* Bug in rails fixtures.rb on 849 - use fixtures_path.to_s.size instead
* swap jquery for prototype
* photo cropping is not working
* configure configatron from ruby, not yaml

=2.0.0.pre
* Rails 3.1.0.beta1 compatibility

=1.9.9

* Rails 3.1 compatibility
* Ruby 1.9.2 compatibility
* Use Paperclip instead of attachment_fu
* Add Omniauth
* Remove lots of old, unused featured (contests, skills, offerings, etc.)

=1.2.1
* Anonymous forum replies
* Turn comment notifications on or off by post
* Allow admins/mods to edit comments (they can already delete them)
* Fix security vulnerability in AuthenticatedSystem

=1.2.0
* Threaded private messages
* Clear cache link in admin dashboard
* Add support for using rakismet gem to check comments for spam (see README for instructions)

=1.1.0
* fixed time_ago formatting problem on user/index
* user Authlogic's perishable token for doing password resets (instead of sending them a password)


= 1.0.4.2
* Rails 2.3.4 compatibility (all tests pass, Takk)
* Add searchlogic gem dependency (searchlogic is awesome, will be using it more in the future, currently just using on admin_controller#comments)
* Add searchlogic to manage tags page, add taggings_count to tags (new migration)

= 1.0.4
* Changes to Japanese language translations
* Use authlogic instead of restful_authentication (augthlogic gem now required, new migrations required) (thanks jnimety!)
* Big overhaul of i18n by sdecleire, more international-friendly translation tokens. `en` is now the default locale (instead of `en-US`)


= 1.0.3
* complete private messages integration, allow sending messages to multiple recipients
* upgrades to Event functionality, including RSVPs (eksatx)
* Photo albums, Static pages and messages controller tests (juafrlo, eksatx)