@@ -13,7 +13,7 @@
           %li.delete=link_to_remote(:delete.l, {:url => comment_path(comment.commentable_type, comment.commentable_id, comment), :method => :delete, 500 => 'alert(\'Sorry, there was a server error\'); return false',  :success => visual_effect(:fade, "comment_#{comment.id}"), :confirm => :are_you_sure_you_want_to_permanently_delete_this_comment.l} )
         -if logged_in? && (current_user.admin? || current_user.moderator?)
           %li.edit=link_to_remote :edit.l, :url => {:controller => 'comments', :action => 'edit', :id => comment.id}, :method => :get
-    .entry-content= comment.comment
+    .entry-content= comment.comment.html_safe
 
 -else
   .hentry{:id => "comment_#{comment.id}"}
@@ -33,7 +33,7 @@
         -if logged_in? && (current_user.admin? || current_user.moderator?)
           %li.edit=link_to_remote :edit.l, :url => {:controller => 'comments', :action => 'edit', :id => comment.id}, :method => :get
           
-    .entry-content= comment.comment
+    .entry-content= comment.comment.html_safe
 
 - highlighted ||= nil
 - if highlighted
