@@ -21,7 +21,7 @@
         %li.addfriend= add_friend_link(post.user)
 
   .entry-content
-    = truncate_words(post.post, 75, '...' )
+    = truncate_words(post.post, 75, '...' ).html_safe
     
     = render :partial => 'polls/excerpt', :locals => {:poll => post.poll} if post.poll
     
