@@ -20,7 +20,7 @@
     -box :id => "about_me" do
       %h3
         =:about_me.l
-      %p= @user.description
+      %p= @user.description.html_safe
 
   -box :class => 'alt', :id => 'friends' do
     %h3
@@ -45,11 +45,11 @@
               = link_to image_tag(comment.recipient.avatar_photo_url(:thumb), :alt => "#{comment.recipient.login}", :width => '50', :height => '50'), commentable_url(comment)
           %dd.fn
             - if comment.commentable.eql?(comment.recipient)
-              %strong= :to.l + ": #{link_to comment.recipient.login, commentable_url(comment)}"
+              %strong= :to.l + ": #{link_to comment.recipient.login, commentable_url(comment)}".html_safe
             - else
-              %strong= :on_commentable.l + ": #{link_to comment.commentable_name, commentable_url(comment)} (#{comment.commentable_type.l})"
+              %strong= :on_commentable.l + ": #{link_to comment.commentable_name, commentable_url(comment)} (#{comment.commentable_type.l})".html_safe
           %dd
-            %p= "\"#{truncate_words( comment.comment, 10, '...')}\""
+            %p= truncate_words( comment.comment, 10, '...').html_safe
 
 
   - unless @photo_comments.empty?
@@ -61,7 +61,7 @@
             = link_to(image_tag(comment.commentable.photo.photo.url(:thumb), :width => '50', :height => '50'), user_photo_path(@user, comment.commentable))
           %dd.fn= "#{comment.username}" + " " + :says.l + ":"
           %dd
-            = truncate_words(comment.comment, 10)
+            = truncate_words(comment.comment, 10).html_safe
             %br
             = link_to "&raquo; ".html_safe + :view_comment.l, user_photo_path(@user, comment.commentable) + "#comment_#{comment.id}"
 
